--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -52,7 +52,7 @@ $danger:        #DA3E51 !default; // 100  原 $red
 $danger-20:     #F5CCD1 !default; // 20
 $danger-10:     #FDECEF !default; // 10
 
-$light:         $gray-100 !default;
+$light:         $white !default;
 $dark:          $black !default;
 // scss-docs-end theme-color-variables
 
