--- a/assets/scss/_font.scss
+++ b/assets/scss/_font.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700&display=swap');
+
 $font-family-sans-serif: 'Noto Serif TC', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 // line-height
@@ -28,5 +30,3 @@ $font-sizes: (
   8:  $h8-font-size,
   lg: $font-size-lg
 );
-
-// $headings-font-weight:        700;
