--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,10 +1,20 @@
 * {
-  letter-spacing: 1rem * 0.02;
+  letter-spacing: 0.02em;
 }
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  letter-spacing: 1rem * 0.15;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  letter-spacing: 0.05em;
 }
 
 p {
