--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -1,93 +1,95 @@
 // scss-docs-start gray-color-variables
-$white:    #fff !default;    // 中性色 Neutral 0
-$gray-100: #F9F9F9 !default; // 中性色 Neutral 10
+$white: #fff !default; // 中性色 Neutral 0
+$gray-100: #f9f9f9 !default; // 中性色 Neutral 10
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
-$gray-400: #ECECEC !default; // 中性色 Neutral 40
+$gray-400: #ececec !default; // 中性色 Neutral 40
 $gray-500: #adb5bd !default;
 $gray-600: #909090 !default; // 中性色 Neutral 60
 $gray-700: #495057 !default;
-$gray-800: #4B4B4B !default; // 中性色 Neutral 80
+$gray-800: #4b4b4b !default; // 中性色 Neutral 80
 $gray-900: #212529 !default;
-$black:    #000 !default;    // 中性色 Neutral 100
+$black: #000 !default; // 中性色 Neutral 100
+$background: #140f0a !default; // 中性色 Background Color
 
 // scss-docs-start color-variables
-$blue:    #0d6efd !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #d63384 !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #198754 !default;
-$teal:    #20c997 !default;
-$cyan:    #0dcaf0 !default;
+$blue: #0d6efd !default;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #d63384 !default;
+$red: #dc3545 !default;
+$orange: #fd7e14 !default;
+$yellow: #ffc107 !default;
+$green: #198754 !default;
+$teal: #20c997 !default;
+$cyan: #0dcaf0 !default;
 
 // scss-docs-start theme-color-variables
 
 // primary
-$primary-dark:  #7B6651 !default; // 120
-$primary:       #BF9D7D !default; // 100
-$primary-80:    #AE9984 !default; // 80
-$primary-60:    #E1D1C2!default;  // 60
-$primary-40:    #F1EAE4 !default; // 40
-$primary-tint:  #FAF7F5 !default; // Primary Tint
+$primary-dark: #7b6651 !default; // 120
+$primary: #bf9d7d !default; // 100
+$primary-80: #ae9984 !default; // 80
+$primary-60: #e1d1c2 !default; // 60
+$primary-40: #f1eae4 !default; // 40
+$primary-tint: #faf7f5 !default; // Primary Tint
 
-$secondary:     $gray-600 !default;
+$secondary: $gray-600 !default;
 // success
-$success-dark:  #299F65 !default; // 120
-$success:       #52DD7E !default; // 100
-$success-20:    #BCFBBD !default; // 20
-$success-10:    #E8FEE7 !default; // 10
+$success-dark: #299f65 !default; // 120
+$success: #52dd7e !default; // 100
+$success-20: #bcfbbd !default; // 20
+$success-10: #e8fee7 !default; // 10
 // info
-$info-dark:     #1D66AC !default; // 120
-$info:          #3BADEF !default; // 100
-$info-20:       #B1EFFD !default; // 20
-$info-10:       #E6FBFE !default; // 10
+$info-dark: #1d66ac !default; // 120
+$info: #3badef !default; // 100
+$info-20: #b1effd !default; // 20
+$info-10: #e6fbfe !default; // 10
 
-$warning:       $yellow !default;
+$warning: $yellow !default;
 // Alert / Error
-$danger-dark:   #C22538 !default; // 120
-$danger:        #DA3E51 !default; // 100  原 $red
-$danger-20:     #F5CCD1 !default; // 20
-$danger-10:     #FDECEF !default; // 10
+$danger-dark: #c22538 !default; // 120
+$danger: #da3e51 !default; // 100  原 $red
+$danger-20: #f5ccd1 !default; // 20
+$danger-10: #fdecef !default; // 10
 
-$light:         $white !default;
-$dark:          $black !default;
+$light: $white !default;
+$dark: $black !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
-  "primary-dark":   $primary-dark,
-  "primary":        $primary,
-  "primary-80":     $primary-80,
-  "primary-60":     $primary-60,
-  "primary-40":     $primary-40,
-  "primary-tint":   $primary-tint,
+  'primary-dark': $primary-dark,
+  'primary': $primary,
+  'primary-80': $primary-80,
+  'primary-60': $primary-60,
+  'primary-40': $primary-40,
+  'primary-tint': $primary-tint,
 
-  "secondary":      $secondary,
+  'secondary': $secondary,
 
-  "success-dark":   $success-dark,
-  "success":        $success,
-  "success-20":     $success-20,
-  "success-10":     $success-10,
+  'success-dark': $success-dark,
+  'success': $success,
+  'success-20': $success-20,
+  'success-10': $success-10,
 
-  "info-dark":      $info-dark,
-  "info":           $info,
-  "info-20":        $info-20,
-  "info-10":        $info-10,
+  'info-dark': $info-dark,
+  'info': $info,
+  'info-20': $info-20,
+  'info-10': $info-10,
 
-  "warning":        $warning,
+  'warning': $warning,
 
-  "danger-dark":    $danger-dark,
-  "danger":         $danger,
-  "danger-20":      $danger-20,
-  "danger-10":      $danger-10,
+  'danger-dark': $danger-dark,
+  'danger': $danger,
+  'danger-20': $danger-20,
+  'danger-10': $danger-10,
 
-  "light":          $white,
-  "dark":           $dark,
-  "gray-80":        $gray-800,
-  "gray-60":        $gray-600,
-  "gray-40":        $gray-400,
-  "gray-10":        $gray-100
+  'light': $white,
+  'dark': $dark,
+  'background': $background,
+  'gray-80': $gray-800,
+  'gray-60': $gray-600,
+  'gray-40': $gray-400,
+  'gray-10': $gray-100
 ) !default;
