--- a/assets/scss/_input.scss
+++ b/assets/scss/_input.scss
@@ -2,19 +2,17 @@
 $form-check-input-checked-bg-color: $primary;
 $form-check-input-focus-box-shadow: none;
 
-[type="checkbox"] {
+[type='checkbox'] {
   &:hover {
-    border-color: $gray-400;
-    box-shadow: 0px 0px 0px 2px $primary;
     cursor: pointer;
+    border-color: $gray-400;
+    box-shadow: 0 0 0 2px $primary;
   }
 }
-
 
 // Input Field
 $form-label-color: $light;
 $form-label-font-weight: 700;
-
 $input-padding-y: $spacer;
 $input-padding-x: $spacer;
 
@@ -25,7 +23,7 @@ $input-placeholder-color: $gray-600;
 // focus
 $input-focus-border-color: $primary;
 $input-focus-color: $gray-800;
-$input-focus-box-shadow: 0px 0px 0px 4px rgba($primary, 0.1);
+$input-focus-box-shadow: 0 0 0 4px rgba($primary, 0.1);
 
 .form-control.verify-error {
   border-color: $danger;
