--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -43,6 +43,8 @@
 @import 'bootstrap/scss/utilities/api';
 
 /** 8. 客製樣式置於最後，覆蓋前面的樣式 */
+@import './form-control';
+@import './labels';
 @import './navbar';
 @import './button';
 @import './base';
