feat: 增加 fs 的 responsive

--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -1,6 +1,12 @@
 $utilities: map-merge(
   $utilities,
   (
+    'font-size': map-merge(
+			map-get($utilities, 'font-size'),
+			(
+				responsive: true
+			)
+		),
     'cursor': (
       property: cursor,
       class: cursor,
