--- a/assets/scss/bootstrap/_utilities.scss
+++ b/assets/scss/bootstrap/_utilities.scss
@@ -13,6 +13,12 @@ $utilities: map-merge(
 				responsive: true
 			)
     ),
+    'z-index': map-merge(
+			map-get($utilities, 'z-index'),
+			(
+				responsive: true
+			)
+    ),
     'cursor': (
       property: cursor,
       class: cursor,
