--- a/assets/scss/_spacers.scss
+++ b/assets/scss/_spacers.scss
@@ -1,9 +1,9 @@
 $spacer: 1rem !default;
 $spacers: (
   0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
+  1: $spacer * .25, // 4
+  2: $spacer * .5, // 8
   3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  4: $spacer * 1.5, // 24
+  5: $spacer * 3, // 48
 ) !default;
