--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -36,6 +36,7 @@
 @import 'bootstrap/scss/dropdown';
 @import 'bootstrap/scss/nav';
 @import 'bootstrap/scss/helpers';
+@import 'bootstrap/scss/carousel';
 /** ... */
 
 /** 7. 使用 utilities 需引入 utilities api（將 sass map 轉換為 utility classes） */
