--- a/assets/scss/bootstrap/_dropdown.scss
+++ b/assets/scss/bootstrap/_dropdown.scss
@@ -8,9 +8,10 @@ $dropdown-border-color: $primary;
     color: $gray-800;
     background-color: $light;
 
-    &:focus {
+    &:focus, &.active {
       color: $dark;
       border-color: $primary;
+      background-color: white;
     }
 
     &.disabled {
