style(guideline): 樣式調整

--- a/assets/scss/bootstrap/_font.scss
+++ b/assets/scss/bootstrap/_font.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Noto+Serif+TC:wght@400;500;700&display=swap');
 $font-family-sans-serif:
   'Noto Serif TC',
   system-ui,
