--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -38,6 +38,7 @@
 @import 'bootstrap/scss/helpers';
 @import 'bootstrap/scss/carousel';
 @import 'bootstrap/scss/transitions';
+@import 'bootstrap/scss/carousel';
 /** ... */
 
 /** 7. 使用 utilities 需引入 utilities api（將 sass map 轉換為 utility classes） */
