style(layout): tab 調適

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -44,6 +44,7 @@
 @import 'bootstrap/scss/utilities/api';
 
 /** 8. 客製樣式置於最後，覆蓋前面的樣式 */
+@import './bootstrap/nav';
 @import './bootstrap/form-control';
 @import './bootstrap/labels';
 @import './bootstrap/navbar';
