--- a/assets/scss/bootstrap/_nav.scss
+++ b/assets/scss/bootstrap/_nav.scss
@@ -25,7 +25,7 @@ $nav-tabs-link-active-color: $primary;
 
 .nav-link {
   display: block;
-  padding: var(--#{$prefix}nav-link-padding-y) var(--#{$prefix}nav-link-padding-x);
+  padding: 1rem 1.5rem;
   @include font-size(var(--#{$prefix}nav-link-font-size));
   font-weight: var(--#{$prefix}nav-link-font-weight);
   color: var(--#{$prefix}nav-link-color);
@@ -37,6 +37,25 @@ $nav-tabs-link-active-color: $primary;
   &.active,
   &.router-link-active {
     color: var(--bs-nav-link-hover-color);
+    &::after {
+      position: absolute;
+      bottom: 0.25rem;
+      left: 50%;
+      width: 30%;
+      height: 4px;
+      content: '';
+      transform: translateX(-50%);
+      border-radius: 10px;
+      background-color: #bf9d7d;
+    }
+  }
+
+  &:hover {
+    &::after {
+      left: 50% !important;
+      width: 30% !important;
+      bottom: 0.25rem !important;
+    }
   }
 
   &:hover,
