feat(api): 基礎登入/登出

--- a/assets/scss/bootstrap/_dropdown.scss
+++ b/assets/scss/bootstrap/_dropdown.scss
@@ -8,7 +8,8 @@ $dropdown-border-color: $primary;
     color: $gray-800;
     background-color: $light;
 
-    &:focus, &.active {
+    &:focus,
+    &.active {
       color: $dark;
       border-color: $primary;
       background-color: white;
@@ -18,5 +19,15 @@ $dropdown-border-color: $primary;
       opacity: 1;
       color: $dark;
     }
+  }
+}
+
+.dropdown-item {
+  padding: 0 1.5rem !important;
+  line-height: 3.5rem !important;
+  &:hover,
+  &:focus {
+    color: $primary !important;
+    background-color: $primary-tint !important;
   }
 }
