fix: 調整首頁輪播元件化

--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -7,3 +7,15 @@ $duration-450: 450ms; // page, modal
     @content;
   }
 }
+
+@mixin lg {
+  @media (max-width: 1199.98px) {
+    @content;
+  }
+}
+
+@mixin xxl {
+  @media (max-width: 1999.98px) {
+    @content;
+  }
+}
